# best_stocks

./: .gitignore  6e8d5a2  README.md  fii_dividends.csv  pyproject.toml  requirements.txt  temp_db.sqlite
.github/workflows/: run_scraper.yml
best_stocks/: __init__.py  analysis.py  app.py  config.py  database.py  fetch_data.py  list.py  main.py  validation.py  webscraping.py  wiki.txt
best_stocks/pages/: db_manegement.py  wiki.py
output/: data.csv  divedend.csv  fiis_brasil.csv  outliers.csv  outliers_1740250013.4719276.csv  outliers_1740250233.529652.csv  outliers_1740250248.1026146.csv  outliers_1740250271.7898443.csv  outliers_1740250303.1984088.csv  outliers_1740250318.7131767.csv  outliers_1740258339.4519904.csv  outliers_1740258517.9613395.csv  outliers_1740258742.546995.csv  outliers_1740258767.4290216.csv  stock_1740247826.188201.csv
src/: analysis.py  app.py  config.py  database.py  fii_app.py  main.py  news.py  stock_app.py  tickers_list.py  webscraping.py
src/input/: dividends.py  fii_data.py  news.py  stock_data.py
src/pages/: _news.py  db_management.py  wiki.py
storage/: fii_tickers_error.txt  news  temp_db.sqlite  tickers_list.txt
tests/: test_calcs.py
